# Konata-Dancer

./: Bluehair.cpp  Bluehair.h  CMakeLists.txt  Colors.h  FEATURES  FEATURES.md  INSTRUCTION  Konata Dancer.slnx  LICENSE  README.md  RespondingGuy.cpp  RespondingGuy.h  TrayAnimation.cpp  TrayAnimation.h  XPMessageBox.h  XPMessageBoxexampl.cpp  menu.cpp  menu.h  prize.cpp  prize.h  resource.h  timotei.cpp  tray_animation.cpp
Konata Dancer/: Konata Dancer.aps  Konata Dancer.rc  Konata Dancer.vcxproj  Konata Dancer.vcxproj.filters  konata_config.json  notes.json  resource.aps  resource.h  timotei.cpp
Konata Dancer/x64/Debug/: Konata Dancer.exe.recipe  Konata Dancer.ilk  Konata Dancer.res
Konata Dancer/x64/Debug/Konata Dancer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Konata Dancer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
x64/Debug/: notes.json
